# 08-Web-HW-2

./: README.md  consumer.py  models.py  producer.py  pyproject.toml  test_connect.py
email_sms/: consumer_email.py  consumer_sms.py  models.py  producer.py
