[tool.poetry]
name = "08-web-hw-2"
version = "0.1.0"
description = ""
authors = ["OleksiyM <oleksiymaliovanyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Faker = "^22.4.0"
mongoengine = "^0.27.0"
python-dotenv = "^1.0.0"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
